k8s/api/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tenant-config-api
  namespace: logging
spec:
  podSelector:
    matchLabels:
      app: tenant-config-api
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ocm-gateway
